[package]
name = "chat-example"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1.74"
futures = "0.3.29"
libp2p = { version = "0.53.1", features = [
  "tokio",
  "gossipsub",
  "mdns",
  "tls",
  "macros",
  "tcp",
  "yamux",
  "quic",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
